--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:all": "npm run test:coverage && npm run test:e2e"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -49,7 +50,9 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.16",
     "hono": "^4.9.8",
+    "html2canvas": "^1.4.1",
     "jest-localstorage-mock": "^2.4.26",
+    "jspdf": "^3.0.3",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.263.1",
     "multer": "^2.0.2",
@@ -59,6 +62,7 @@
     "node-qpdf": "^1.0.1",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "plaid": "^38.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
