--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,15 +1,6 @@
 {
   "recommendations": [
-    "redhat.java",                   
-    "vscjava.vscode-java-pack",
-    "vscjava.vscode-java-test",
-    "vscjava.vscode-maven",
-    "pivotal.vscode-spring-boot",
-    "vscjava.vscode-java-dependency",
-    "GitHub.copilot-chat",
-    "eamodio.gitlens",
-    "ms-azuretools.vscode-docker",
-    "GabrielBB.vscode-lombok"
+    "denoland.vscode-deno"
   ],
   "unwantedRecommendations": []
 }
