--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "msw": "^2.11.2",
     "playwright": "^1.55.0",
     "postcss": "^8.5.6",
+    "supabase": "^2.54.11",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.4",
     "typescript": "^5",
