fix(e2e-selenium): Update Java version from 17 to 21
- Updated pom.xml compiler source/target to Java 21
- Added Eclipse .classpath and .project files for JavaSE-21
- Added JDT compiler settings for Java 21
- Fixes workspace warnings about JRE compatibility

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,5 +63,6 @@
   "tailwindCSS.includeLanguages": {
     "plaintext": "css",
     "postcss": "css"
-  }
+  },
+  "java.configuration.updateBuildConfiguration": "automatic"
 }
