--- a/mcp-java-modernization/demo-java-project/pom.xml
+++ b/mcp-java-modernization/demo-java-project/pom.xml
@@ -36,6 +36,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- Embedded in-memory database for local dev/run -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Modern dependencies for Java 21 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
